# ShooterPSX

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.bat  common.h  compile_assets.bat  compile_tools.bat  file.h  imgui.ini  iso.xml  mesh.h  music.h  nds.cmake  system.cnf
ASSETS/: LEVEL.MSH  LEVEL.TXC  LEVELCOL.TXC  TESTLVL.MSH  TESTLVL.TXC  cubetest.glb  cubetest.gltf  level.gltf  level1.dss  levelcol.gltf  scene.gltf  tri_unit.gltf  tri_unit.txc
ASSETS_old/: CUBETEST.MSH  GOURAUD.VSH  instr.sbk  instruments.sbk  level.gltf  level.mtl  tri_unit.msh
assets/: GOURAUD.FSH  GOURAUD.VSH  cubetest.msh  cubetest.ps1mesh  level.col  level.gltf  level.msh  level.txc  levelcol.gltf  levelcol.msh  levelcol.txc  license.txt  rat.gltf  rat.msh  testlvl.gltf
assets/levels/: test.lvl  test.lvl.bak
assets/models/: entity.msh  entity.txc  level.col  level.msh  level.txc  level.vis  level2.col  level2.msh  level2.txc  level2.vis  test.col  test.msh  test.txc  test.vis  weapons.msh  weapons.txc
assets/models/ui_tex/: menu1.txc  menu2.txc  ui.txc
assets/music/: instr.sbk
assets/music/sequence/: black.dss  combust.dss  e1m1.dss  e3m3.dss  energia.dss  justice.dss  level1.dss  level3.dss  pitchtst.dss  subnivis.dss
assets_to_build/: BLIT.FSH  BLIT.VSH  GOURAUD.FSH  GOURAUD.VSH  level.msh  level.mtl  level.txc  level_col.mtl
assets_to_build/audio/: instr.csv  sfx.csv
assets_to_build/audio/music/: black.mid  energia.mid  level3.mid  pitchtst.mid  subnivis.mid  subnivis_old.mid
assets_to_build/level_editor/: imgui.ini
assets_to_build/levels/: level1.lvl  level2.lvl  test.lvl  test2.lvl
assets_to_build/models/: enemy_chaser.mtl  entity.blend  entity.blend1  entity.mtl  gun.blend  gun.blend1  gun.mtl  level.mtl  level2.mtl  level2_col.mtl  level_col.mtl  main_menu_mockup.blend  test.blend  test.blend1  test.mtl  test2.blend  test2.mtl  test_col.mtl  weapons.blend  weapons.mtl
assets_to_build/music/: instr.csv  instruments.csv  instruments.sbk
assets_to_build/music/sequence/: black.mid  combust.mid  e1m1.mid  e3m3.mid  justice.mid  level1.mid  level2.mid  level3.mid  subnivis.mid
docs/: fcol.md  fdss.md  flvl.md  fmsh.md  fsbk.md  fsfa.md  fstr.md  ftxc.md  fvis.md  units.md
enc_temp_folder/4ec237d466b2e4fca7fcb8ecadc9fa3/: mesh.c
enc_temp_folder/7128b641b3f6b1a04d33558a58cc16fb/: main.c
source/: CMakeLists.txt  camera.c  camera.h  cheats.h  collision.c  collision.h  common.h  credits.c  debug_menu_level.c  debug_menu_main.c  debug_menu_music.c  entity.c  entity.h  file.c  file.h  file_psx.c  file_windows.c  fixed_point.c  fixed_point.h  in_game.c  input.c  input.h  input_psx.c  input_windows.c  input_windows.cpp  level.c  level.h  lut.h  main.c  main.h  memory.c  memory.h  mesh.c  mesh.h  mixer.h  music.c  music.h  music_psx.c  music_windows.c  particle_systems.h  (+28 more)
source/editor/: camera.c  camera.h  light_bake.c  main.c
source/entities/: chaser.c  chaser.h  crate.c  crate.h  door.c  door.h  pickup.c  pickup.h  platform.c  platform.h  trigger.c  trigger.h
source/nds/: file.c  input.c  mesh.c  mixer.c  music.c  psx.c  psx.h  renderer.c
source/pc/: debug_layer.cpp  debug_layer.h  file.c  input.c  mesh.c  mixer.c  music.c  psx.h  renderer.c
source/psx/: file.c  input.c  mesh.c  mixer.c  music.c  renderer.c  renderer_inline.c  texture.c  timer.c
source/win/: debug_layer.cpp  debug_layer.h  psx.c  psx.h
source/windows/: debug_layer.cpp  debug_layer.h  file.c  input.c  mesh.c  music.c  psx.c  psx.h  renderer.c  texture.c
